--- a/app/assets/stylesheets/groovy/vars.sass
+++ b/app/assets/stylesheets/groovy/vars.sass
@@ -10,11 +10,19 @@ $turq: #79FBE5
 $turq-d: #46CDB9
 
 $purple: #512863
-$purple-l: lighten($purple, 6%)
 
 $white: #FFF
 
 $stroke: 5px
 
-$MOBILEmax: 768px
-$MINImax: 574px
+$bg: $brown
+$bg-d: $brown-d
+$bg-off: $purple
+$acc-1: $yellow
+$acc-1-d: $yellow-d
+$acc-2: $orange
+$acc-2-d: $orange-d
+$acc-3: $red
+$acc-3-d: $red-d
+$loud: $turq
+$loud-d: $turq-d
