--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -1,14 +1,15 @@
-@import 'parts/vars'
+@import 'general/vars'
 
-@import 'parts/general'
-@import 'parts/header'
-@import 'parts/nav'
-@import 'parts/boards'
-@import 'parts/quasi_modal'
-@import 'parts/user_handling'
-@import 'parts/help'
+@import 'general/general'
+@import 'general/header'
+@import 'general/nav'
+@import 'general/boards'
+@import 'general/quasi_modal'
+@import 'general/user_handling'
+@import 'general/help'
 
 .groovy
+  @import 'groovy/vars'
   @import 'groovy/general'
   @import 'groovy/header'
   @import 'groovy/nav'
@@ -17,3 +18,14 @@
   @import 'groovy/user_handling'
   @import 'groovy/help'
   @import 'groovy/shablam'
+
+.bubblegum
+  @import 'bubblegum/vars'
+  @import 'bubblegum/general'
+  @import 'bubblegum/header'
+  @import 'bubblegum/nav'
+  @import 'bubblegum/boards'
+  @import 'bubblegum/quasi_modal'
+  @import 'bubblegum/user_handling'
+  @import 'bubblegum/help'
+  @import 'bubblegum/shablam'
