--- a/app/assets/stylesheets/general/quasi_modal.sass
+++ b/app/assets/stylesheets/general/quasi_modal.sass
@@ -39,7 +39,7 @@
     .content
       max-width: 100%
       left: -50%
-    input
+    form input
       min-width: unset
       max-width: 100%
       font-size: 20px
