task creation tweaks

--- a/app/assets/stylesheets/general/quasi_modal.sass
+++ b/app/assets/stylesheets/general/quasi_modal.sass
@@ -27,6 +27,9 @@
     padding: 7px 10px
     border-radius: 8px
     font-size: 24px
+    outline: none
+    &:focus
+      outline: none
   form small
     display: inline-block
     padding-bottom: 2px
