--- a/app/views/boards/_show.html.haml
+++ b/app/views/boards/_show.html.haml
@@ -5,7 +5,7 @@
     .row.no-gutters
       .col-md-9.col-lg-10.col-12
         %ul.tasklist
-          - incomplete(@home_board.orphan_tasks).each do |task|
+          - incomplete(@home_board.orphan_tasks.listed).each do |task|
             %li{ class: "#{task.flg_tomorrow ? 'tomorrow' : ''} prio-#{task.nbr_prio}", id: "task-#{task.id}" }
               = task.text
               = link_to '', complete_task_path(task.id), method: :patch, remote: true, class: 'check'
@@ -19,10 +19,13 @@
 
 :javascript
   window.addEventListener("turbolinks:load", () => {
-    $(document).keypress(function(){
-      // console.log(event.which);
-      if(event.which == 116 && !$('.quasi-modal').hasClass('active')){
+    $(document).keyup(function(){
+      // console.log(event.key);
+      if (event.key == 't' && !$('.quasi-modal').hasClass('active')) {
         $.ajax({url: "#{new_task_path(board: @home_board)}"});
+      }
+      if (event.key == 'Escape' && $('.quasi-modal').hasClass('active')) {
+        $('.quasi-modal').removeClass('active')
       }
     });
   });
