--- a/app/views/tasks/_form.html.haml
+++ b/app/views/tasks/_form.html.haml
@@ -22,5 +22,17 @@
 .help.help-icon.help-quasimodal.text-center
   %small
     %span.white
-      = '-t / -[ip][123]'
-    sets task to tomorrow / importance[123]
+      = '-t'
+    sets task to tomorrow
+  %small
+    %span.white
+      = '-[i:p][1:2:3]'
+    sets importance/prio to 1/2/3
+  %small
+    %span.white
+      = '/[listName]'
+    sets list
+  %small
+    %span.white
+      = 'shift+Enter'
+    form stays open
