--- a/app/assets/stylesheets/bubblegum/general.sass
+++ b/app/assets/stylesheets/bubblegum/general.sass
@@ -34,3 +34,10 @@ a
 span.white
   color: $white
   font-weight: 700
+
+button
+  background-color: $loud-d
+  color: $white
+  &:hover
+    background-color: $loud
+    color: $white
