--- a/app/assets/stylesheets/bubblegum/user_handling.sass
+++ b/app/assets/stylesheets/bubblegum/user_handling.sass
@@ -10,3 +10,10 @@ form
     transition: background-color .4s ease
     &:hover
       background-color: $bg-off
+
+.supersettings
+  select
+    transition: color .2s ease
+    color: $loud-d
+    &:hover
+      color: $loud
