--- a/app/assets/stylesheets/general/user_handling.sass
+++ b/app/assets/stylesheets/general/user_handling.sass
@@ -3,3 +3,21 @@ form.new_user
   input
     display: block
     margin: 15px auto 10px
+
+.supersettings
+  font-size: 18px
+  select
+    cursor: pointer
+    border: none
+    background: none
+    appearance: none
+    font-weight: bold
+    text-align: center
+  span.board-time
+    font-weight: bold
+  span.unless
+    cursor: pointer
+    opacity: .2
+    transition: opacity .2s ease
+    &:hover
+      opacity: 1
