--- a/app/assets/stylesheets/groovy/general.sass
+++ b/app/assets/stylesheets/groovy/general.sass
@@ -34,3 +34,10 @@ a
 span.white
   color: $white
   font-weight: 700
+
+button
+  background-color: $loud-d
+  color: $purple
+  &:hover
+    background-color: $loud
+    color: $purple
