active profile button

--- a/app/assets/stylesheets/bubblegum/header.sass
+++ b/app/assets/stylesheets/bubblegum/header.sass
@@ -22,7 +22,7 @@
   .header-links
     a.header-link
       background-color: lighten(lighten($bg-off, 6%), 5%)
-      &:hover
+      &.active, &:hover
         background-color: lighten(lighten($bg-off, 6%), 10%)
 
 .header-interceptor
