--- a/app/assets/stylesheets/general/user_handling.sass
+++ b/app/assets/stylesheets/general/user_handling.sass
@@ -15,9 +15,21 @@ form.new_user
     text-align: center
   span.board-time
     font-weight: bold
-  span.unless
+  &.active
+    .unless
+      opacity: 1
+      cursor: default
+      &:after
+        content: ''
+    .extra
+      display: inline
+  .extra
+    display: none
+  .unless
     cursor: pointer
     opacity: .2
+    &:after
+      content: '?'
     transition: opacity .2s ease
     &:hover
       opacity: 1
