--- a/app/assets/stylesheets/general/boards.sass
+++ b/app/assets/stylesheets/general/boards.sass
@@ -76,13 +76,12 @@ ul.boardlist li
     &.fadeout
       margin-bottom: -23px
 
-  ul.tasklist li
-    a.check
-      opacity: 1
-      right: 1px
-      top: 1px
-      height: 19px
-      width: 28px
+  ul.tasklist li a.check, ul.boardlist li a.remove
+    opacity: 1
+    right: 1px
+    top: 1px
+    height: 19px
+    width: 28px
 
 .linklist
   text-align: right
