--- a/app/views/home/parts/_board_time_selector.haml
+++ b/app/views/home/parts/_board_time_selector.haml
@@ -1,3 +1,3 @@
-%select{ name: 'board_time', id: 'board-time', disabled: true }
+%select{ name: 'board_time', id: 'board-time', disabled: current_user.board_time == 'always' ? true : false }
   - ['always', 'workdays'].each do |time|
-    %option{ value: time }= time
+    %option{ value: time, selected: current_user.board_time == time }= time
