--- a/app/views/home/parts/_extra_board_selector.haml
+++ b/app/views/home/parts/_extra_board_selector.haml
@@ -1,3 +1,3 @@
 %select.extra{ name: 'extra_board', id: 'extra-board'}
-  - (@boards - [current_user.home_board]).each do |board|
-    %option{ value: board.id }= board.title
+  - @boards.each do |board|
+    %option{ value: board.id, selected: current_user.extra_board_id == board.id }= board.title
