--- a/app/views/home/profile.haml
+++ b/app/views/home/profile.haml
@@ -2,13 +2,12 @@
   .container.position-relative
     %h1.header-title You
 
+.container.text-sm-center
+  %h3.flashy preferences
 %section.container.profile-settings
-  = link_to destroy_user_session_path, method: :delete, class: 'header-link more' do
-    %button.btn.btn-block Logout
-  %br
   .row
     .col
-      .supersettings
+      .supersettings{ class: current_user.board_time != 'always' ? 'extra-time' : '' }
         %p
           = "Your HomeBoard will "
           = "#{render partial: '/home/parts/board_time_selector'}".html_safe
@@ -19,6 +18,10 @@
             = "on #{render partial: '/home/parts/extra_time_selector'} it will be".html_safe
           = "#{render partial: '/home/parts/extra_board_selector'}".html_safe
         %p= "This is enjoyed in the #{render partial: '/home/parts/theme_selector'} Theme.".html_safe
+  .row.logout
+    .col
+      = link_to destroy_user_session_path, method: :delete, class: 'header-link more' do
+        %button.btn.btn-block Logout
 
 .container.text-sm-center
   %h3.flashy Boards
@@ -36,28 +39,17 @@
               = link_to '', board_path(board), method: :delete, remote: true, class: 'remove'
 
 :javascript
-  $('.profile-settings select[name="home_board"]').on('change', function(e) {
-    $.ajax({
-      url: "/set_home_board/" + $(e.target).val(),
-      method: "PATCH"
-    });
-  });
-  $('.profile-settings select[name="pref_theme"]').on('change', function(e) {
-    $.ajax({
-      url: "/set_theme/" + $(e.target).val(),
-      method: "PATCH"
-    });
-  });
   $('.supersettings #board-time').on('change', function(e) {
     if ($(e.target).val() == 'always') {
-      $(e.target).parents('.supersettings').removeClass('active');
+      $(e.target).parents('.supersettings').removeClass('extra-time');
       $(e.target).attr('disabled', true);
     }
   })
   $('.supersettings .unless').click( function(e) {
-    $(e.target).parents('.supersettings').addClass('active');
+    $(e.target).parents('.supersettings').addClass('extra-time');
     $(e.target).siblings('#board-time').attr('disabled', false);
     $(e.target).siblings('#board-time').val('workdays');
+    $(e.target).siblings('#board-time').trigger('change');
   });
 
   $('.supersettings select').on('change', function(e) {
@@ -65,10 +57,17 @@
       'board_time': $('.supersettings #board-time').val(),
       'home_board_id': $('.supersettings #home-board').val(),
       'extra_time': $('.supersettings #extra-time').val(),
-      'extra_board_id': $('.supersettings #extra-board').val()
+      'extra_board_id': $('.supersettings #extra-board').val(),
+      'theme': $('.supersettings #pref-theme').val()
     };
     $.ajax({
       url: "/set_tings/" + encodeURIComponent(JSON.stringify(settings)),
       method: "PATCH"
     });
+    if (settings['theme']) {
+      $('html').removeClass('groovy');
+      $('html').removeClass('bubblegum');
+
+      $('html').addClass(settings['theme']);
+    }
   });
