--- a/app/views/boards/_show.html.haml
+++ b/app/views/boards/_show.html.haml
@@ -24,17 +24,18 @@
       if (event.key == 't' && !$('.quasi-modal').hasClass('active')) {
         $.ajax({url: "#{new_task_path(board: @home_board)}"});
       }
-      if (event.key == 'l') {
+      if (event.key == 'l' && !$('.quasi-modal').hasClass('active')) {
         $.ajax({url: "#{new_list_path(board: @home_board)}"});
       }
       if (event.key == 'Escape' && $('.quasi-modal').hasClass('active')) {
         $('.quasi-modal').removeClass('active')
-        $('.quasi-modal .content input').val('')
+        $('.quasi-modal .content input#task_text').val('')
       }
       // form is submitted by default, this just handles the modal
       if (event.key == 'Enter') {
         if (event.shiftKey) {
-          $('.quasi-modal .content input').val('')
+          // $('.quasi-modal .content input').val('')
+          $('.quasi-modal .content input#task_text').val('')
           $('.quasi-modal .content small.modifier').addClass('d-none')
         } else {
           $('.quasi-modal').removeClass('active')
