--- a/app/assets/stylesheets/groovy/boards.sass
+++ b/app/assets/stylesheets/groovy/boards.sass
@@ -11,6 +11,8 @@ ul.tasklist, ul.boardlist
     border: 2px solid $bg-d
 
 ul.tasklist li
+  &.isnow
+    color: $loud
   &.prio-1
     border: 2px solid $acc-1
   &.prio-2
