raw theme selectable

--- a/app/views/home/parts/_theme_selector.haml
+++ b/app/views/home/parts/_theme_selector.haml
@@ -1,3 +1,4 @@
 %select{ name: 'pref_theme', id: 'pref-theme'}
+  %option{ value: 'raw', selected: current_user.theme == 'raw' } Raw
   %option{ value: 'groovy', selected: current_user.theme == 'groovy' } Groovy
   %option{ value: 'bubblegum', selected: current_user.theme == 'bubblegum' } BubbleGum
