--- a/app/assets/stylesheets/groovy/boards.sass
+++ b/app/assets/stylesheets/groovy/boards.sass
@@ -25,6 +25,7 @@ ul.tasklist li
       background-color: lighten($bg, 10%)
 
 ul.boardlist li
+  font-family: 'Righteous', sans-serif
   a.remove
     background-color: $bg
     &:hover
@@ -37,3 +38,9 @@ ul.boardlist li
     border-radius: 5px
     &:hover
       background-color: lighten($bg-off, 6%)
+
+.boardlist .listlist
+  padding-top: 8px
+  li
+    font-family: 'Merriweather', serif
+    background-color: $bg
