--- a/app/assets/stylesheets/general/boards.sass
+++ b/app/assets/stylesheets/general/boards.sass
@@ -51,10 +51,7 @@ ul.tasklist li
     transition: opacity .2s ease, background-color .2s ease
 
 ul.boardlist li
-  &:hover a.remove
-    opacity: 1
   a.remove
-    opacity: 0
     display: inline-block
     position: absolute
     right: 10px
@@ -66,6 +63,18 @@ ul.boardlist li
     background-size: 55%
     background-repeat: no-repeat
     background-position: center
+  .listlist li.with-child
+    a.remove
+      &:before
+        content: 'tasks/links will be orphaned'
+        position: absolute
+        width: 200px
+        font-size: 0.8rem
+        right: 20px
+        opacity: .75
+        display: none
+      &:hover:before
+        display: block
 
 @media only screen and (max-width: $MINImax)
   ul.tasklist li, ul.boardlist li
