--- a/app/assets/stylesheets/general/general.sass
+++ b/app/assets/stylesheets/general/general.sass
@@ -1,8 +1,9 @@
 body
-  background: lightgrey
+  background: AntiqueWhite
+  font-family: 'Merriweather', serif
 
 section
-  background: rosybrown
+  background: BurlyWood
   position: relative
   border-radius: 15px
   margin-top: 10px
@@ -22,3 +23,15 @@ a
 button, button:focus, .btn:focus
   outline: none
   box-shadow: none
+
+h1, h2, h3, h4
+  font-family: 'Righteous', sans-serif
+  text-transform: uppercase
+  color: Peru
+
+p, ul, ol, a
+  font-family: 'Merriweather', serif
+  font-weight: 300
+
+span.white
+  color: AntiqueWhite
