--- a/app/views/parts/_header.html.haml
+++ b/app/views/parts/_header.html.haml
@@ -4,5 +4,7 @@
   - if current_user
     .container.text-right.position-relative
       .header-links
-        = link_to '', toggle_help_path, method: :patch, class: current_user.wants_help ? 'header-link help-tgl' : 'header-link help-tgl off', remote: true
-        = link_to '', home_profile_path, class: "header-link #{current_page?(home_profile_path) ? 'active' : ''}"
+        = link_to toggle_help_path, method: :patch, class: current_user.wants_help ? 'header-link help-tgl' : 'header-link help-tgl off', remote: true do
+          = inline_svg_tag('icons/help', class: 'help-icon icon')
+        = link_to home_profile_path, class: "header-link #{current_page?(home_profile_path) ? 'active' : ''}" do
+          = inline_svg_tag('icons/chain', class: 'profile-icon icon')
