--- a/app/views/tasks/_form.html.haml
+++ b/app/views/tasks/_form.html.haml
@@ -19,7 +19,7 @@
     %small.float-left.modifier.d-none.important.three
       hi!prio
     .clearfix
-.help.help-icon.help-quasimodal.text-center
+.help.with-help-icon.help-quasimodal.text-center
   %small
     %span.white
       = '-t'
