--- a/app/views/lists/_show.html.haml
+++ b/app/views/lists/_show.html.haml
@@ -1,8 +1,10 @@
 .container.text-sm-center
   %h3.flashy= list.title
 %section.container{ id: "list-#{list.id}" }
-  = link_to '+', new_task_path(list: list, board: @home_board), class: 'add-link', remote: true
-  = link_to '#', new_lnk_path(list: list, board: @home_board), class: 'add-link new-lnk', remote: true
+  = link_to new_task_path(list: list, board: @home_board), class: 'add-link', remote: true do
+    = inline_svg_tag('icons/add', class: 'add-icon icon')
+  = link_to new_lnk_path(list: list, board: @home_board), class: 'add-link new-lnk', remote: true do
+    = inline_svg_tag('icons/hash', class: 'lnk-icon icon')
   .row
     .col-md-9.col-lg-10.col-12
       %ul.tasklist
