--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -1,31 +1,34 @@
 @import 'general/vars'
 
-@import 'general/general'
 @import 'general/header'
-@import 'general/nav'
-@import 'general/boards'
-@import 'general/quasi_modal'
+@import 'general/general'
+@import 'general/icon_links'
+@import 'general/list_section'
 @import 'general/user_handling'
 @import 'general/help'
+// @import 'general/nav'
+// @import 'general/boards'
+// @import 'general/quasi_modal'
+// @import 'general/shablam'
 
-.groovy
-  @import 'groovy/vars'
-  @import 'groovy/general'
-  @import 'groovy/header'
-  @import 'groovy/nav'
-  @import 'groovy/boards'
-  @import 'groovy/quasi_modal'
-  @import 'groovy/user_handling'
-  @import 'groovy/help'
-  @import 'groovy/shablam'
-
-.bubblegum
-  @import 'bubblegum/vars'
-  @import 'bubblegum/general'
-  @import 'bubblegum/header'
-  @import 'bubblegum/nav'
-  @import 'bubblegum/boards'
-  @import 'bubblegum/quasi_modal'
-  @import 'bubblegum/user_handling'
-  @import 'bubblegum/help'
-  @import 'bubblegum/shablam'
+// .groovy
+//   @import 'groovy/vars'
+//   @import 'groovy/general'
+//   @import 'groovy/header'
+//   @import 'groovy/nav'
+//   @import 'groovy/boards'
+//   @import 'groovy/quasi_modal'
+//   @import 'groovy/user_handling'
+//   @import 'groovy/help'
+//   @import 'groovy/shablam'
+//
+// .bubblegum
+//   @import 'bubblegum/vars'
+//   @import 'bubblegum/general'
+//   @import 'bubblegum/header'
+//   @import 'bubblegum/nav'
+//   @import 'bubblegum/boards'
+//   @import 'bubblegum/quasi_modal'
+//   @import 'bubblegum/user_handling'
+//   @import 'bubblegum/help'
+//   @import 'bubblegum/shablam'
