--- a/app/assets/stylesheets/general_full/user_handling.sass
+++ b/app/assets/stylesheets/general_full/user_handling.sass
@@ -1,3 +1,9 @@
+form.new_user
+  margin-bottom: 30px
+  input
+    display: block
+    margin: 15px auto 10px
+
 .supersettings
   font-size: 18px
   select
