even more styling and omnibutton

--- a/app/assets/stylesheets/general/icon_links.sass
+++ b/app/assets/stylesheets/general/icon_links.sass
@@ -40,6 +40,10 @@ a.icon-link
     .icon
       vertical-align: text-top
       height: 80%
+  &.check
+    height: 24px
+    .icon
+
 
   @media only screen and (max-width: $MINImax)
     height: 20px
