--- a/app/assets/stylesheets/general/nav.sass
+++ b/app/assets/stylesheets/general/nav.sass
@@ -59,9 +59,13 @@
     ul
       margin-top: 0
       margin-left: 48px
+      &.open
+        li:not(.active)
+          margin-top: 12px
     h1
       font-size: 24px
 
     .overlay .highlight-pillar
       left: 0
-      margin-left: 57px
+      right: 12px
+      margin-left: 60px
