--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -6,10 +6,12 @@
 @import 'general/list_section'
 @import 'general/user_handling'
 @import 'general/help'
-// @import 'general/nav'
+@import 'general/nav'
+@import 'general/quasi_modal'
+@import 'general/shablam'
+@import 'general/omnibutton'
+
 // @import 'general/boards'
-// @import 'general/quasi_modal'
-// @import 'general/shablam'
 
 // .groovy
 //   @import 'groovy/vars'
