--- a/app/assets/stylesheets/general/header.sass
+++ b/app/assets/stylesheets/general/header.sass
@@ -28,6 +28,10 @@
     margin-top: 52px
     margin-left: 64px
     color: AntiqueWhite
+  .add-link
+    position: absolute
+    right: 10px
+    top: 46px
 
 @media only screen and (max-width: $MINImax)
   .header
@@ -43,3 +47,6 @@
       margin-top: 0
       margin-left: 48px
       font-size: 24px
+    .add-link
+      right: 26px
+      top: 36px
