--- a/app/assets/stylesheets/general/help.sass
+++ b/app/assets/stylesheets/general/help.sass
@@ -15,5 +15,14 @@
     path
       fill: Peru
 
+.quasi-modal
+  .help
+    margin: 8px 0
+    small
+      display: block
+    span.white
+      font-weight: 600
+      color: Peru
+
 @media only screen and (max-width: $MINImax)
   .help
