--- a/app/views/lists/_show.html.haml
+++ b/app/views/lists/_show.html.haml
@@ -1,9 +1,9 @@
-.container.text-sm-center
+.container.text-sm-center.pt-3
   %h3.flashy= list.title
-%section.container{ id: "list-#{list.id}" }
-  = link_to new_task_path(list: list, board: @home_board), class: 'add-link', remote: true do
+%section.container.list-section{ id: "list-#{list.id}" }
+  = link_to new_task_path(list: list, board: @home_board), class: 'icon-link add-link', remote: true do
     = inline_svg_tag('icons/add', class: 'add-icon icon')
-  = link_to new_lnk_path(list: list, board: @home_board), class: 'add-link new-lnk', remote: true do
+  = link_to new_lnk_path(list: list, board: @home_board), class: 'icon-link add-link new-lnk', remote: true do
     = inline_svg_tag('icons/hash', class: 'lnk-icon icon')
   .row
     .col-md-9.col-lg-10.col-12
@@ -13,4 +13,6 @@
     .col-md-3.col-lg-2.col-12
       .linklist
         - list.lnks.each do |lnk|
-          = link_to lnk.text, lnk.href, target: '_blank', class: 'alink'
+          = link_to lnk.href, target: '_blank', class: 'alink' do
+            = lnk.text
+            = inline_svg_tag('icons/hash', class: 'lnk-decoration')
