--- a/app/views/lnks/new.js.erb
+++ b/app/views/lnks/new.js.erb
@@ -1,3 +1,13 @@
 $('.quasi-modal').addClass('active')
 $('.quasi-modal .content').html("<%= j (render partial: 'form') %>")
 $(".quasi-modal .content input#lnk_text").focus()
+
+$('.quasi-modal .content input').on('input', function(e) {
+  if (/^\/<%= Board.find(params[:board]).lists_as_regex %>/.test($(e.target).val())) {
+    $(e.target).closest('form').find("input[name='list_name']").val($(e.target).val().substring(1))
+    $('#new_task .additionals').prepend(
+      '<small class="float-right modifier pr-2">~/<%= Board.find(params[:board]).title %>/' + $(e.target).val().substring(1) + '/...</small>'
+    )
+    $(e.target).val('')
+  }
+})
