--- a/app/assets/stylesheets/general/quasi_modal.sass
+++ b/app/assets/stylesheets/general/quasi_modal.sass
@@ -39,6 +39,8 @@
     &:focus
       outline: none
       outline-width: 0
+    &#lnk_href
+      margin-top: 4px
   form small
     display: inline-block
     padding-bottom: 2px
